--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h1>声でつながる生成AI：音声情報を活かした新しい日常</h1>
     <p>※下のフレームに表示されない場合は、<a href="presentation.md" target="_blank">こちら</a>から直接マークダウンを確認できます。</p>
     
-    <iframe src="https://markdown-viewer.github.io/#/?embed=true&url=https://[あなたのGitHubユーザー名].github.io/[リポジトリ名]/presentation.md"></iframe>
+    <iframe src="https://markdown-viewer.github.io/#/?embed=true&url=https://sanny114.github.io/20250406DXroom/presentation.md"></iframe>
   </div>
 </body>
 </html>
