--- a/index.html
+++ b/index.html
@@ -4,46 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>声でつながる生成AI</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@marp-team/marpit@2/css/marpit.min.css">
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 20px;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-    .marp-container {
-      width: 100%;
-    }
-    .marp-link {
-      margin-top: 20px;
-      display: block;
+      text-align: center;
     }
   </style>
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
   <h1>声でつながる生成AI：音声情報を活かした新しい日常</h1>
   <p>下のリンクからプレゼンテーションを開始できます：</p>
-  <a href="https://marp-team.github.io/marp-cli-example/" class="marp-link" target="_blank">プレゼンテーションを表示</a>
-  <p>または <a href="presentation.md">マークダウンファイルを直接確認</a></p>
   
-  <div id="presentation-content" class="marp-container"></div>
-
-  <script>
-    // マークダウンファイルを読み込んで表示
-    fetch('presentation.md')
-      .then(response => response.text())
-      .then(markdown => {
-        document.getElementById('presentation-content').innerHTML = 
-          '<h2>マークダウンプレビュー：</h2>' + marked.parse(markdown);
-      })
-      .catch(error => {
-        console.error('マークダウンの読み込みに失敗しました:', error);
-        document.getElementById('presentation-content').innerHTML = 
-          '<p>マークダウンファイルの読み込みに失敗しました。リポジトリに presentation.md ファイルが存在することを確認してください。</p>';
-      });
-  </script>
+  <p><a href="https://marpit-api.vercel.app/render?md=https://sanny114.github.io/20250406DXroom/presentation.md" target="_blank">Marpプレゼンテーションを表示</a></p>
+  
+  <p>または <a href="presentation.md">マークダウンファイルを直接確認</a></p>
 </body>
 </html>
